--- a/App/Bioscopify/app/src/main/res/values/strings.xml
+++ b/App/Bioscopify/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+<array name="spinner_array">
+    <item>ewa</item>
+    <item>fuck</item>
+</array>
     <string name="action_settings">Settings</string>
 </resources>
