--- a/App/Bioscopify/app/src/main/res/values/strings.xml
+++ b/App/Bioscopify/app/src/main/res/values/strings.xml
@@ -4,8 +4,26 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 <array name="spinner_array">
-    <item>ewa</item>
-    <item>fuck</item>
+    <item>All</item>
+    <item>Action</item>
+    <item>Adventure</item>
+    <item>Animation</item>
+    <item>Comedy</item>
+    <item>Crime</item>
+    <item>Documentary</item>
+    <item>Drama</item>
+    <item>Family</item>
+    <item>Fantasy</item>
+    <item>History</item>
+    <item>Horror</item>
+    <item>Music</item>
+    <item>Mystery</item>
+    <item>Romance</item>
+    <item>Science Fiction</item>
+    <item>Tv Movie</item>
+    <item>Thriller</item>
+    <item>War</item>
+    <item>Western</item>
 </array>
     <string name="action_settings">Settings</string>
 </resources>
