--- a/App/Bioscopify/app/src/main/res/values/strings.xml
+++ b/App/Bioscopify/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
         <item>Western</item>
     </array>
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
